# CodeNavi-Generation

./: .gitignore  pom.xml  readme.md
script/: local_test.py  pyproject.toml  requirements.txt  vllm.sh
script/app/: basic_modification_analysis.py  communication.py  extract.py  general_prompts.py  history.py  inference.py  prompt_state.py  prompts.py  select_elements.py
script/app/abs/: select_methods.py
script/app/abs/classified_topdown/: history.py  inference.py  prompt_state.py  prompts.py
script/app/abs/llm_4_round/: inference.py  prompt_state.py
script/app/abs/llm_genpat_4_round/: inference.py  prompt_state.py
script/app/abs/mark/: history.py  inference.py  prompt_state.py  prompts.py
script/app/abs/mark2/: inference.py  prompt_state.py  prompts.py
script/app/abs/selected_topdown/: history.py  inference.py  prompt_state.py
script/app/pipeline/: abstract.py  extract.py  genquery.py
script/app/refine/: README.md  __init__.py  data_structures.py  doc.md  dsl_constructor.py  dsl_refiner.py  prompt_state.py  prompts.py  zero_shot_refine.py
script/app/refine/parser/: DSL.g4  (+10 more)
script/app/test/: sample_c3.py
script/app/tmp/: rename_test_file.py  sample_c3.py  sample_opensource_data.py  script.py  statistic_dataset.py  statistic_dataset_c3.py  tmp.py
script/data/: dataset.py
script/debug/: __init__.py
script/debug/refine/: __init__.py  debug_refiner_single_instance.py
script/exp/: abstract.py  check_det_result.py  detect.py  evaluation.py  extract.py  genpat.py  genpat_detect.py  llm_abstract.py  run_query_engine.py
script/exp/opensource/: analysis_ast_report.py  calculate_statistics.py  rq2_statistic.py  statistic_analysis.py
script/exp/optimization/: extract_ab_gen_llm_ql.py  extract_ab_gen_llm_ql_test.py  extract_ab_gen_pmd.py  extract_ab_gen_ql.py  query_engine_a2a_ql.py  query_engine_pmd.py  query_engine_ql.py  refine_pmd.py  refine_ql.py
script/exp/pure_llm/: prompt.py  pure_RQ1.py  validate_grammar.py
script/exp/thesis/: check_rq2_metrics.py  collect_pre_merge_functions.py  fix_scanned_case.py  get_satwarnings.py  rerun_rq2_dsl_detect.py
script/exp/vul/: check_vuls.py  gen_query_vul4j.py  gen_vulfix.py  sample_repos.py  scan_repos_sample.py  scan_repos_vul4j.py  scan_repos_vulfix.py
script/experiment/: genpat.py
script/interface/java/: run_java_api.py
script/interface/llm/: cost_manager.py  langchain_local_llm.py  llm_dispatcher.py  llm_openai.py  test_api.py  test_curl.sh
script/tests/: README.md  __init__.py  conftest.py
script/tests/parser/: __init__.py  test_parser_all_kirin.py  test_validator.py
script/tests/refine/: __init__.py  test_refiner.py
script/utils/: common.py  config.py  timer.py
(+373 files in other folders)
