[project]
name = "script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.2",
    "colorlog==6.9.0",
    "pydantic==2.10.4",
    "openai==1.59.4",
    "prettytable==3.12.0",
    "numpy",
    "seaborn",
    "matplotlib",
    "pandas"
]
