[project]
name = "script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.2",
    "colorlog==6.9.0",
    "pydantic==2.10.4",
    "openai==1.59.4",
    "requests",
    "prettytable==3.12.0",
    "numpy",
    "seaborn",
    "matplotlib",
    "pandas",
    "paramiko>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "json5>=0.13.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "antlr4-python3-runtime>=4.13.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
visualization = "exp.thesis.visualization_ori.run_visualization:run_server"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "exp", "data", "interface", "utils"]

[tool.pytest.ini_options]
# pytest 配置

# 测试文件匹配模式
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# 测试发现路径
testpaths = ["tests"]

# 输出选项
# 默认跳过需要 LLM 的测试（使用 -m "requires_llm" 来运行这些测试）
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-m",
    "not requires_llm",
]

# 标记定义
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_llm: marks tests that require LLM API",
    "requires_data: marks tests that require test data files",
]
